# Ft_turing

./: README.md  package.yaml  turing.cabal
app/: Main.hs
mine/tur/: CHANGELOG.md  tur.cabal
mine/tur/app/: Main.hs  Turing.hs
mine/tur/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
mine/tuto/: CHANGELOG.md  tuto.cabal
mine/uslss/: main.hs
src/: Lib.hs
